--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,9 +86,9 @@ h3 {
     -moz-background-size: cover;
     -o-background-size: cover;
     min-height: 50vmin;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+    width: 40%;
+     margin-right: 5rem;
+        margin-left: 10rem;;
     z-index: -1;
 }
 
@@ -135,6 +135,23 @@ justify-content-sm-center #ready-btn{
     margin: 0;
     padding: 0;
     width: 80%
+}
+
+/* ------------------------- Home page different layout for bigger screens */
+
+@media screen and (max-width: 768px) {
+    #pig-pic,
+    #basic-details p {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+ 
+    #ready-btn {
+        width: 80%;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 /* ------------------------- Why Main Body*/
@@ -319,17 +336,7 @@ footer {
 .footer-row col-12 a i {
     text-align: left;
 }
+
 .social-links i:hover {
     color:#e57373;
-} */
-
-/* ------------------------- Home page different layout for bigger screens */
-
-@media screen and (max-width: 768px) {
-    #pig-pic {
-        min-height: 50vmin;
-        width: 40%;
-        margin-right: 5rem;
-        margin-left: 10rem;
-    }
 }
