add padding and fix spelling mistake

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ h3 {
 #basic-details p {
   min-height: 30vmin;
   margin-top: 15px;
-  padding: 0;
+  padding: 5px;
   width: 100%;
   text-align: center;
   background-color: rgba(140, 249, 31, 0.7);
