--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,16 +220,20 @@ h3 {
 }
 
 /* ------------------------- Recipe Main Body*/
+.recipe-row {
+  padding-bottom: 30px;
+}
 
+.recipe-row h2 {
+    text-align: center;
+    text-decoration: none;
+}
 .food-text {
   height: 100%;
   width: 100%;
+  font-size: 1rem;
   color: #3f3f3f;
   margin-bottom: 10px;
-}
-
-.recipe-row {
-  padding-bottom: 30px;
 }
 
 .recipe-row p {
@@ -245,9 +249,6 @@ h3 {
   -moz-background-size: cover;
   -o-background-size: cover;
   min-height: 300px;
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
 }
 
 /* ------------------------- Challange Form Page */
