--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,10 +224,10 @@ h3 {
   padding-bottom: 30px;
 }
 
-.recipe-row h2 {
-    text-align: center;
+#recipe-title {
     text-decoration: none;
 }
+
 .food-text {
   height: 100%;
   width: 100%;
@@ -236,10 +236,11 @@ h3 {
   margin-bottom: 10px;
 }
 
-
-
 .recipe-row p {
+  margin-top: 2rem;  
   text-align: center;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 .food-pic {
