remove col-12 not required in h2 recipe

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ h3 {
   }
 
   #ready-btn {
-      display: block;
+    display: block;
     margin-top: -3rem;
     margin-left: 15rem;
     min-height: 6vmin;
@@ -221,8 +221,7 @@ h3 {
 
 /* ------------------------- Recipe Main Body*/
 
-
-.recipe-title a {
+.recipe-title {
     text-decoration: none;
 }
 
@@ -235,7 +234,6 @@ h3 {
 }
 
 .recipe-row p {
- 
   margin-top: 3rem;  
   text-align: center;
   font-weight: 400;
@@ -243,7 +241,6 @@ h3 {
 }
 
 .food-pic {
-  
   padding-bottom: 2rem;
   height: auto;
   max-width: 100%;
