--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ h3 {
    align-items: center;
    justify-content: center;
 }
+
 /* ------------------------- Home page different layout for bigger screens ---- */
 /* tablet size */
 @media screen and (min-width: 640px) {
@@ -242,9 +243,10 @@ h3 {
 
 .food-pic {
   padding-bottom: 2rem;
-  height: auto;
-  max-width: 100%;
+  height: 20rem;
+  width: 100%;
   border: 1rem;
+   
 }
 
 /* ------------------------- Challange Form Page */
