text links and list for why vegan health

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,11 @@ h3 {
   overflow-y: auto;
 }
 
+.why-text li{
+    text-align: left;
+}
+
+
 /* ------------------------- Recipe Main Body*/
 
 .recipe-row a {
