add media for larger text size for bigger screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -284,7 +284,7 @@ h3 {
 }
 
 .signup-form {
-  margin: 7rem 0.7rem 3rem 0.4rem;
+  margin: 3rem 0.7rem 3rem 0.4rem;
   max-width: 100%;
   text-align: center;
 }
@@ -296,14 +296,13 @@ h3 {
 }
 
 .text-input {
-  color: #cfd8dc;
   font-weight: bold;
+  font-size: 15px;
   text-align: center;
   background-color: transparent;
   border-color:  #e57373;
-  border-radius: 15px;
-  margin: 0;
-  padding: 0;
+  border-radius: 17px;
+
 }
 
 /* target the placeholder text */
@@ -333,6 +332,18 @@ h3 {
   margin-bottom: 2rem;
 }
 
+/* --- Larger text for bigger screens */
+
+@media screen and (min-width: 1024px) {
+  .text-input,
+  .join-button { 
+    font-size: 2rem;
+  }
+  .signup-form {
+      margin-top: 5rem;
+  }
+  
+}
 /* ------------------------- Footer */
 
 footer {
