--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,7 +99,7 @@ h3 {
   padding: 5px;
   width: 100%;
   text-align: center;
-  background-color: rgba(140, 249, 31, 0.7);
+  background-color:rgb(0, 134, 125, 0.5);
   font-weight: 400;
   font-size: 0.8rem;
   z-index: 1;
@@ -163,7 +163,7 @@ h3 {
 
   #basic-details p {
     margin-top: -10rem;
-    margin-left: 5rem;
+    margin-left: 7rem;
     width: 40%;
     font-size: 1rem;
   }
