increase font weight for tablet to make clearer on challange page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,8 +151,6 @@ h3 {
   }
 }
 
-
-
 /* large screen */
 @media screen and (min-width: 1700px) {
   #pig-pic {
@@ -253,8 +251,7 @@ h3 {
   padding-bottom: 2rem;
   height: 20rem;
   width: 100%;
-  border: 1rem;
-   
+  border: 1rem;   
 }
 
 /* ------------------------- Challange Form Page */
@@ -337,19 +334,20 @@ h3 {
 
 /* --- Larger text for bigger screens */
 
-@media screen and (min-width: 768px) { /* tablet */
+/* tablet */
+@media screen and (min-width: 768px) { 
   .text-input,
   .join-button { 
     font-size: 1.5rem;
-    font-weight: bold;
+    font-weight: 900;
   }
   .signup-form {
       margin-top: 8rem;
   }
 }
 
-
-@media screen and (min-width: 1024px) { /* laptop and above */
+/* laptop and above */
+@media screen and (min-width: 1024px) {
   .text-input,
   .join-button { 
     font-size: 2rem;
