add styling for why buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,6 +225,7 @@ h3 {
 
 .why-text .btn {
   padding: 0;
+  margin-top: 20px;;
   background-color: #e57373;
   border-color: #e57373;
   color: #3f3f3f;
