amend form color for readability on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ h3 {
   font-weight: 900;
   font-size: 15px;
   text-align: center;
-  background-color: transparent;
+  background-color: rgba(190, 253, 221, 0.2);
   border-color: #e57373;
   border-radius: 17px;
 }
@@ -349,7 +349,7 @@ h3 {
   background-color: #e57373;
   border-color: #e57373;
   color: #3f3f3f;
-  font-weight: 900;
+  font-weight: bold;
   border-radius: 25px;
   width: 15rem;
   margin-bottom: 2rem;
