amend background color and beautify style CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 /* ------------------------- Body --*/
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #c9c8c8;
+  background-color: #ecfffd;
   min-height: 100vh;
   position: relative;
   margin: 0;
