--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Alegreya+Sans:ital,wght@400;700;1&family=Montserrat&display=swap");
 
-/* ------------------------- Body --*/
+/* --- Body  */
+
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #ecfffd;
@@ -12,7 +13,7 @@ body {
   padding-bottom: 3rem;
 }
 
-/* ------------------------- General Headings --*/
+/* --- General Headings  */
 
 header {
   margin: 0;
@@ -42,7 +43,7 @@ h3 {
   color: #3f3f3f;
 }
 
-/* ------------------------- Navigation Bar ----*/
+/* --- Navigation Bar  */
 
 .navbar-brand {
   font-weight: bold;
@@ -67,7 +68,7 @@ h3 {
   color: #00867d;
 }
 
-/* ------------------------- Home Page -----*/
+/* --- Home Page  */
 
 .together-block {
   margin-left: 4rem;
@@ -80,7 +81,7 @@ h3 {
   text-align: center;
 }
 
-/* ------ this is mobile version ------*/
+/* This is mobile version */
 #pig-pic {
   background: url("../images/baby-pigs-unsplash.jpg") no-repeat center center;
   background-size: cover;
@@ -122,7 +123,7 @@ h3 {
 }
 
 #ready-btn:hover {
-  color: #00867d;
+  color: #e0e9e8;
 }
 
 #center-btn {
@@ -131,7 +132,7 @@ h3 {
   justify-content: center;
 }
 
-/* ------------------------- Home page different layout for bigger screens ---- */
+/* Home page different layout for bigger screens */
 
 /* tablet size */
 @media screen and (min-width: 640px) {
@@ -181,7 +182,8 @@ h3 {
   }
 }
 
-/* ------------------------- Why Main Body*/
+/* --- Why Main Body  */
+
 #why-h1 {
   text-align: center;
   font-size: 2rem;
@@ -242,7 +244,7 @@ h3 {
 }
 
 .why-text .btn:hover {
-  color: #00867d;
+  color: #e0e9e8;
 }
 
 .card-body {
@@ -250,7 +252,7 @@ h3 {
   border-color: #c9c8c8;
 }
 
-/* ------------------------- Recipe Main Body*/
+/* --- Recipe Main Body  */
 
 .recipe-row a {
   text-decoration: none;
@@ -278,7 +280,7 @@ h3 {
   border: 1rem;
 }
 
-/* ------------------------- Challange Form Page */
+/* --- Challange Form Page  */
 
 #frog-pic {
   background: url("../images/frog-pixabay.jpg") no-repeat center center;
@@ -357,10 +359,10 @@ h3 {
 }
 
 .signup-form .join-button:hover {
-  color: #3f3f3f;;
+  color: #e0e9e8;
 }
 
-/* --- Larger text for bigger screens */
+/* Larger text for bigger screens */
 
 /* tablet */
 @media screen and (min-width: 768px) {
@@ -388,7 +390,7 @@ h3 {
   }
 }
 
-/* ------------------------- Footer */
+/* --- Footer  */
 
 footer {
   margin: 0;
