--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ h3 {
   margin-bottom: 0.5rem;
   border: 0;
   width: 100%;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .navbar-light .nav-item.active .nav-link,
@@ -66,6 +66,13 @@ h3 {
 .navbar-light .nav-item:focus .nav-link,
 .navbar-light .nav-item:hover .nav-link {
   color: #00867d;
+}
+
+/* large screen */
+@media screen and (min-width: 1700px) {
+    .navbar {
+  font-size: 2rem;
+}
 }
 
 /* --- Home Page  */
