--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,8 +274,12 @@ h3 {
 }
 
 .card-body {
-  background-color: #c9c8c8;
-  border-color: #c9c8c8;
+  background-color: #f8f8ff;
+  border-color: #f8f8ff;
+ border: 2px solid #3f3f3f;
+  box-shadow: 5px 10px grey;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 /* --- Recipe Main Body  */
